Spring Boot upgrade and other upgrades
Bump to Spring Boot 3.2.2
Bump Apache Jena to pre-release 5.0.0
Removal of Keycloak Client servlet
Add jee-pac4j as replacement
Bump Keycloak to 23.0.4